# git-agent

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  setup.sh
src/git_agent/: cli.py  config.py
src/git_agent/application/: ollama_agent.py  prompt_builder.py  services.py
src/git_agent/domain/: models.py  ports.py  prompts.py  result.py
src/git_agent/infra/: fs.py  git.py  linter.py  ollama_llm_provider.py  serialization.py
src/git_agent/infra/hooks/: logging.py
src/git_agent/infra/strands/: agent.py  tools.py
src/git_agent/ui/reporter/: __init__.py  compare.py  constants.py  review.py
